; ModuleID = '/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_buttonClicked.c'
source_filename = "/home/carl/AnghaBench/libui/unix/extr_OLD_table.c_buttonClicked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tablePart = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i64)* @buttonClicked to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buttonClicked(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca %struct.tablePart*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %6, align 8
  %9 = inttoptr i64 %8 to %struct.tablePart*
  store %struct.tablePart* %9, %struct.tablePart** %7, align 8
  %10 = load %struct.tablePart*, %struct.tablePart** %7, align 8
  %11 = load %struct.tablePart*, %struct.tablePart** %7, align 8
  %12 = getelementptr inbounds %struct.tablePart, %struct.tablePart* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @onEdited(%struct.tablePart* %10, i32 %13, i32* %14, i32* null)
  ret void
}

declare dso_local i32 @onEdited(%struct.tablePart*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
